--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,3 +1,5 @@
 #must have info from the cloud server from which we will read the properties
 spring.cloud.config.uri=http://localhost:8888
-spring.profiles.active=default
+spring.profiles.active=qa
+
+encrypt.key=gonukathu
